--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-</head>
-<body>
+	<title>Trivia Game</title>
+	
 
+</head>
+<body>	
+	<h1>SEC Football Trivia</h1>
+	<button id="begin">Begin the game</button>
+	<br>
+	<div id="show-time">
+	</div>
+	<br>
+	<div id="display">
+		Who is the head coach of the Georgia Bulldogs?<br>
+		<input type="radio" name="question1" id="freeze">Hugh Freeze<br>
+		<input type="radio" name="question1" id="smart">Kirby Smart<br>
+		<input type="radio" name="question1" id="saban">Nick Saban<br>
+		<input type="radio" name="question1" id="fedora">Larry Fedora<br>
+		<br>
+		Who is the head coach of the South Carolina Gamecocks?<br>
+		<input type="radio" name="question2" id="sumlin">Kevin Sumlin<br>
+		<input type="radio" name="question2" id="franklin">James Franklin<br>
+		<input type="radio" name="question2" id="muschamp">Will Muschamp<br>
+		<input type="radio" name="question2" id="malzahn">Gus Malzahn<br>
+		<br>
+		What team won the 2010 SEC championship?<br>
+		<input type="radio" name="question3" id="auburn">Auburn<br>
+		<input type="radio" name="question3" id="alabama">Alabama<br>
+		<input type="radio" name="question3" id="lsu">LSU<br>
+		<input type="radio" name="question3" id="arkansas">Arkansas<br>
+		<br>
+		What team plays in Sanford Stadium?<br>
+		<input type="radio" name="question4" id="misssisippi">Missisippi<br>
+		<input type="radio" name="question4" id="vanderbilt">Vanderbilt<br>
+		<input type="radio" name="question4" id="tennessee">Tennessee<br>
+		<input type="radio" name="question4" id="georgia">Georgia<br>
+		<br>
+		What team was the 2015 Eastern Division champion?<br>
+		<input type="radio" name="question5" id="usc">South Carolina<br>
+		<input type="radio" name="question5" id="missouri">Missouri<br>
+		<input type="radio" name="question5" id="florida">Florida<br>
+		<input type="radio" name="question5" id="kentucky">Kentucky<br>
+		<br>
+		<button id="done">Done</button>
+	</div>
+	 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	  <script src="assets/javascript/app.js"></script>
 </body>
 </html>
