--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="show-time">
 	</div>
 	<br>
-	<div id="display">
+	<div id="display" style="display: none;">
 		Who is the head coach of the Georgia Bulldogs?<br>
 		<input type="radio" name="question1" id="freeze">Hugh Freeze<br>
 		<input type="radio" name="question1" id="smart">Kirby Smart<br>
@@ -32,7 +32,7 @@
 		<input type="radio" name="question3" id="arkansas">Arkansas<br>
 		<br>
 		What team plays in Sanford Stadium?<br>
-		<input type="radio" name="question4" id="misssisippi">Missisippi<br>
+		<input type="radio" name="question4" id="missisippi">Missisippi<br>
 		<input type="radio" name="question4" id="vanderbilt">Vanderbilt<br>
 		<input type="radio" name="question4" id="tennessee">Tennessee<br>
 		<input type="radio" name="question4" id="georgia">Georgia<br>
