--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Trivia Game</title>
-	
+	 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>	
 	<h1>SEC Football Trivia</h1>
 	<button id="begin">Begin the game</button>
+	<br>
 	<br>
 	<div id="show-time">
 	</div>
@@ -42,6 +43,12 @@
 		<input type="radio" name="question5" id="missouri">Missouri<br>
 		<input type="radio" name="question5" id="florida">Florida<br>
 		<input type="radio" name="question5" id="kentucky">Kentucky<br>
+		<br>
+		What team plays in Neyland Stadium?<br>
+		<input type="radio" name="question6" id="msu">Missisippi State<br>
+		<input type="radio" name="question6" id="vandy">Vanderbilt<br>
+		<input type="radio" name="question6" id="tenn">Tennessee<br>
+		<input type="radio" name="question6" id="au">Auburn<br>
 		<br>
 		<button id="done">Done</button>
 	</div>
